@@ -5,6 +5,7 @@
    modified data.
  - Fix parsing empty soap response (#223)
  - Better support for xsd:anyType, by re-using the xsd.AnyObject (#229)
+ - Deserialize SOAP response without message elements correctly (#237)
 
 
 0.19.0 (2016-10-18)
